--- a/front/static/index.html
+++ b/front/static/index.html
@@ -8,25 +8,29 @@
 
     <style>
         body {
-            background-color: #ffffff;
-            margin: 0%;
+            background-image: url("resources/кошьк.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            background-color: #353434;
+            margin: 0;
             display: flex;
             flex-direction: column;
-
+            min-height: 100vh;
         }
+
 
         .RButtons {
             padding-top: 3%;
         }
 
         .CordForm {
-            color:white;
+            color: #ffffff;
             font-weight: bold;
             background-color: rgba(0,0,0,0.3);
             padding: 2%;
-
-
         }
+
         .LabaHeader {
             background-color: #473a3a;
             display: flex;
@@ -40,20 +44,22 @@
 
         #results {
             max-width: 1000px;
-            margin: 0 auto;
-            background: white;
+            margin: 20px auto;
+            background: rgba(255, 255, 255, 0.7);
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
             padding: 25px;
             overflow: hidden;
         }
 
+
+
         #results h3 {
             color: #2c3e50;
             margin-top: 0;
             font-size: 24px;
             padding-bottom: 15px;
-            border-bottom: 2px solid #eaeaea;
+            border-bottom: 2px solid #000000;
             margin-bottom: 25px;
         }
 
@@ -61,7 +67,8 @@
             overflow-x: auto;
             margin: 0 -5px;
             border-radius: 8px;
-            border: 1px solid #e1e5eb;
+            border: 1px solid rgba(225, 229, 235, 0.7);
+            background: rgba(255, 255, 255, 0.7);
         }
 
         #results-table {
@@ -70,8 +77,8 @@
             border-spacing: 0;
             font-size: 14px;
             min-width: 700px;
+            background: rgba(255, 255, 255, 0.7);
         }
-
 
         #results-table th {
             background: linear-gradient(to bottom, #800080, #0c1b33);
@@ -83,45 +90,29 @@
             border-right: 1px solid #2c3e50;
         }
 
-
         #results-table th:last-child {
             border-right: none;
         }
 
-
         #results-table td {
             padding: 14px 12px;
             text-align: center;
-            border-bottom: 1px solid #e1e5eb;
+            border-bottom: 1px solid rgba(225, 229, 235, 0.7);
             vertical-align: middle;
-            transition: background-color 0.2s;
+            background: rgba(255, 255, 255, 0.7);
         }
-
-
-        #results-table tbody tr:nth-child(even) {
-            background-color: #f8f9fb;
-        }
-
-
-        #results-table tbody tr:hover {
-            background-color: #e9f0f7;
-        }
-
 
         #results-table td:nth-child(4) {
             font-weight: 600;
         }
 
-
         .result-hit {
             color: #27ae60;
         }
 
-
         .result-miss {
             color: #e74c3c;
         }
-
 
         #results-table td:nth-child(n+5) {
             font-family: 'Times New Roman', monospace;
@@ -129,15 +120,10 @@
             color: #555;
         }
 
-
         #results-table td:last-child {
             color: #2980b9;
             font-weight: 600;
         }
-
-
-
-
 
     </style>
 </head>
@@ -148,7 +134,7 @@
     <a style="text-align: center;color: white" href="amogus.html">Попасть в бразилию</a>
 </div>
 
-<div style="width: 15%; padding:2%;background-color: #1e55b8;font-size:100%; flex-direction: column;">
+<div style="width: 15%; padding:2%;background-color: #1e55b8;font-size:100%; flex-direction: row; ">
     <b>Выберите координаты точки: </b>
 
     <div class="CordForm">
@@ -199,7 +185,7 @@
 
 
 <div style="text-align: center;">
-    <div class="Graph">
+    <div class="Graph" >
         <canvas id="coordinatePlane" width="300" height="300"></canvas>
 
     </div>
